Added New Dinosaur Information

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <body>
 
 	<h1>Awesome Dinosaurs</h1>
+	
+	<ol>
+		<li>T-Rex</li>
+		<li>Stegasaurus</li>
+		<li>Dimetrodon</li>
+	</ol>
 </body>
 </html>
