--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 	<h1>Awesome Dinosaurs</h1>
 	
+	<img src="images/dinosaur.png" alt="An angry looking brute">
+	
 	<ol>
 		<li>T-Rex</li>
 		<li>Stegasaurus</li>
